--- a/src/app/modules/users/user-list/user-list.component.html
+++ b/src/app/modules/users/user-list/user-list.component.html
@@ -1,8 +1,15 @@
-<div class="table table-hover">
+<table class="table table-hover">
   <tr>
-    <td>first name</td>
-    <td>last name</td>
-    <td><a><i class="fa fa-edit"></i></a></td>
-    <td><a><i class="fa fa-trash"></i></a></td>
+    <th><h4>first name</h4></th>
+    <th><h4>last name</h4></th>
+    <th><h4>Edit</h4></th>
+    <th><h4>Delete</h4></th>
   </tr>
-</div>
+  <tr *ngFor="let u of allUser">
+    <td>{{ u.firstName }}</td>
+    <td>{{ u.lastName }}</td>
+    <td>{{ u.carrer }}</td>
+    <td><h4><a><i class="fa fa-edit"></i></a></h4></td>
+    <td><h4><a><i class="fa fa-trash"></i></a></h4></td>
+  </tr>
+</table>
