--- a/src/app/modules/users/user/user.component.html
+++ b/src/app/modules/users/user/user.component.html
@@ -1,30 +1,33 @@
-<div class="row">
-  <div class="col-md-6 form-group">
-    <input type="text" class="form-control" placeholder="First Name">
+<div class="user-form">
+  <div class="row">
+    <div class="col-md-6 form-group">
+      <input type="text" class="form-control" placeholder="First Name"/>
+    </div>
+    <div class="col-md-6 form-group">
+      <input type="text" class="form-control" placeholder="Last Name" />
+    </div>
   </div>
-  <div class="col-md-6 form-group">
-    <input type="text" class="form-control" placeholder="Last Name">
+  <div class="row">
+    <div class="col-md-12 form-group">
+      <input type="text" class="form-control" placeholder="Carrer" />
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-12 form-group">
-    <input type="text" class="form-control" placeholder="Carrer">
+  <div class="row">
+    <div class="col-md-6 form-group">
+      <input type="text" class="form-control" placeholder="Age" />
+    </div>
+    <div class="col-md-6 form-group">
+      <input type="text" class="form-control" placeholder="Nationality" />
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-6 form-group">
-    <input type="text" class="form-control" placeholder="Age">
-  </div>
-  <div class="col-md-6 form-group">
-    <input type="text" class="form-control" placeholder="Nationality">
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-8">
-    <button class="btn btn-success btn-block btn-lg">
-      <i class="fa fa-save"></i> Save User</button>
-  </div>
-  <div class="col-md-4">
-    <button class="btn btn-info btn-block btn-lg">Reset</button>
+  <div class="row">
+    <div class="col-md-8">
+      <button class="btn btn-success btn-block btn-lg">
+        <i class="fa fa-save"></i> Save User
+      </button>
+    </div>
+    <div class="col-md-4">
+      <button class="btn btn-info btn-block btn-lg">Reset</button>
+    </div>
   </div>
 </div>
