--- a/src/app/modules/users/user/user.component.html
+++ b/src/app/modules/users/user/user.component.html
@@ -27,7 +27,7 @@
       </button>
     </div>
     <div class="col-md-4">
-      <button class="btn btn-info btn-block btn-lg">Reset</button>
+      <button class="btn btn-info btn-block btn-lg" (click)="resetUser()">Reset</button>
     </div>
   </div>
 </div>
