--- a/src/app/modules/users/user-list/user-list.component.html
+++ b/src/app/modules/users/user-list/user-list.component.html
@@ -13,6 +13,6 @@
     <td><h4>
       <a class="btn" (click)="edit(u)"><i class="fa fa-edit"></i></a>
     </h4></td>
-    <td><h4><a><i class="fa fa-trash"></i></a></h4></td>
+    <td><h4><a class="btn" (click)="deleteUser(u.id)"><i class="fa fa-trash"></i></a></h4></td>
   </tr>
 </table>
